--- a/src/admin.html
+++ b/src/admin.html
@@ -33,14 +33,17 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.min.css"
     />
+
     <div class="">
-      <div class="d-flex">
-        <div class="col-2 bg-blue p-3 text-white sidebar-admin">
+      <div class="d-block d-sm-block d-lg-flex">
+        <div
+          class="d-none d-sm-none d-lg-block col-2 bg-blue p-3 text-white sidebar-admin overflow-auto"
+        >
           <div class="position-fixed">
             <div class="d-flex align-items-center pb-4">
               <img src="assets/logo-sidebar.png" alt="" />
             </div>
-            <ul class="list-unstyled text">
+            <ul class="list-unstyled text h-50">
               <li class="nav-link">
                 <a href="artikelDashboard.html" class="d-block p-2">
                   <i class="fa-solid fa-file-lines"></i> Artikel</a
@@ -61,41 +64,111 @@
                   ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
+
               <li class="nav-link active">
                 <a href="admin.html" class="d-block p-2"
                   ><i class="fa-solid fa-user"></i> Menejemen User</a
                 >
               </li>
-              <li class="nav-link">
+              <li class="nav-link mb-5">
                 <a href="roleManagement.html" class="d-block p-2"
                   ><i class="fa-solid fa-user-cog"></i> Peran</a
                 >
               </li>
+              <div class="pt-5">
+                <li class="nav-link mt-5">
+                  <a href="index.html" class="d-block p-2"
+                    ><i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    Keluar</a
+                  >
+                </li>
+              </div>
             </ul>
-            <div class="logout-submenu">
-              <a href="index.html" class="d-block p-2"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Keluar</a
-              >
-            </div>
           </div>
         </div>
-        <div class="col-10">
+        <div class="col-12 col-sm-12 col-lg-10">
           <!-- navbar -->
-          <div
-            class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-5"
+          <nav
+            class="navbar justify-content-between bg-white px-lg-5 px-1 w-100"
           >
             <img src="assets/logo.png" alt="" />
             <div class="d-flex align-items-center gap-4">
-              <i class="fa-solid fa-bell fa-lg text-secondary"></i>
               <img
                 src="https://via.placeholder.com/30"
                 alt="Avatar"
                 class="rounded-circle img-fluid"
               />
             </div>
+            <button
+              class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none d-lg-none"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+            >
+              <i class="fas fa-bars py-2"></i>
+            </button>
+          </nav>
+          <!-- sidebar mobile -->
+          <div class="d-sm-block d-block d-lg-none">
+            <nav class="navbar position-absolute">
+              <div class="container-fluid">
+                <div
+                  class="offcanvas offcanvas-end bg-primary"
+                  tabindex="-1"
+                  id="offcanvasNavbar"
+                  aria-labelledby="offcanvasNavbarLabel"
+                >
+                  <div class="offcanvas-body text-white sidebar-admin">
+                    <div class="d-flex align-items-center pb-4">
+                      <img src="assets/logo-sidebar.png" alt="" />
+                    </div>
+                    <ul class="list-unstyled text">
+                      <li class="nav-link active">
+                        <a href="artikelDashboard.html" class="d-block p-2">
+                          <i class="fa-solid fa-file-lines"></i> Artikel</a
+                        >
+                      </li>
+                      <li class="nav-link">
+                        <a href="ebook.html" class="d-block p-2"
+                          ><i class="fa-solid fa-book"></i> E-Book</a
+                        >
+                      </li>
+                      <li class="nav-link">
+                        <a href="uplod.html" class="d-block p-2"
+                          ><i class="fa-solid fa-upload"></i> Unggah</a
+                        >
+                      </li>
+                      <li class="nav-link">
+                        <a href="download.html" class="d-block p-2"
+                          ><i class="fa-solid fa-user"></i> Download</a
+                        >
+                      </li>
+
+                      <li class="nav-link active">
+                        <a href="admin.html" class="d-block p-2"
+                          ><i class="fa-solid fa-user"></i> Menejemen User</a
+                        >
+                      </li>
+                      <li class="nav-link">
+                        <a href="roleManagement.html" class="d-block p-2"
+                          ><i class="fa-solid fa-user-cog"></i> Peran</a
+                        >
+                      </li>
+                      <li class="nav-link">
+                        <a href="index.html" class="d-block p-2"
+                          ><i class="fa-solid fa-arrow-right-from-bracket"></i>
+                          Keluar</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </nav>
           </div>
           <!-- content -->
-          <div class="px-5 mt-4">
+          <div class="px-3 px-sm-3 px-lg-5 mt-4 w-100">
             <h5 class="fw-bold fs-4">Admin</h5>
             <ul
               class="d-flex gap-4 items-center list-unstyled my-3 uplodDataLink"
@@ -112,7 +185,7 @@
                 >Add</a
               >
             </div>
-            <div class="d-block" id="cmsDiv">
+            <div class="overflow-auto" id="cmsTable">
               <table
                 id="example"
                 class="table table-striped table-custom bg-white rounded-3"
@@ -473,14 +546,14 @@
                 </tbody>
               </table>
             </div>
-            <div class="d-none" id="apiDiv">
+            <div class="overflow-auto d-none" id="apiTable">
               <table
-                id="example1"
+                id="example"
                 class="table table-striped table-custom bg-white rounded-3"
               >
                 <thead>
                   <tr class="text-secondary">
-                    <th>Names</th>
+                    <th>qqq</th>
                     <th>Phone</th>
                     <th>Email</th>
                     <th>Username</th>
@@ -529,7 +602,230 @@
                       </div>
                     </td>
                   </tr>
-
+                  <!-- Modal delete -->
+                  <div
+                    class="modal fade"
+                    id="staticBackdrop"
+                    data-bs-backdrop="static"
+                    data-bs-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog modal-dialog-centered mx-auto">
+                      <div class="modal-content text-center">
+                        <div class="modal-header">
+                          <div></div>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></button>
+                        </div>
+                        <div
+                          class="modal-body text-center justify-content-center mx-auto"
+                        >
+                          <h1
+                            class="modal-title fs-3 fw-bold"
+                            id="staticBackdropLabel"
+                          >
+                            Anda yakin?
+                          </h1>
+                          Apakah anda yakin untuk menghapus file ini? file ini
+                          belum diselesaikan
+                        </div>
+                        <div class="modal-footer gap-3">
+                          <button
+                            type="button"
+                            class="btn btn-outline-danger"
+                            data-bs-dismiss="modal"
+                          >
+                            Close
+                          </button>
+                          <button type="button" class="btn btn-danger">
+                            Delete
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- modal edit -->
+                  <div
+                    class="modal fade"
+                    id="staticBackdrop1"
+                    data-bs-backdrop="static"
+                    data-bs-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog modal-dialog-centered mx-auto">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h1 class="modal-title fs-5">Edit User</h1>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></button>
+                        </div>
+                        <div class="modal-body">
+                          <form class="text-start">
+                            <div class="mb-3 text-start">
+                              <label
+                                for="exampleInputEmail1"
+                                class="form-label text-start"
+                                >Email</label
+                              >
+                              <input
+                                type="email"
+                                class="form-control"
+                                id="exampleInputEmail1"
+                                placeholder="radioxivan@gmail.com"
+                                aria-describedby="radioxivan@gmail.com"
+                              />
+                            </div>
+                            <div class="mb-3 text-start">
+                              <label
+                                for="username"
+                                class="form-label text-start"
+                                >Username</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="username"
+                                placeholder="Coyboy jr"
+                              />
+                            </div>
+                            <div class="mb-3 text-start">
+                              <label
+                                for="exampleInputPassword1"
+                                class="form-label text-start"
+                                >Password</label
+                              >
+                              <input
+                                type="password"
+                                class="form-control"
+                                id="password1"
+                              />
+                            </div>
+                            <div class="mb-3 text-start">
+                              <label for="name" class="form-label text-start"
+                                >Name</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="name"
+                                placeholder="Mathilda Bell"
+                              />
+                            </div>
+                            <div class="mb-3 text-start">
+                              <label for="phone" class="form-label text-start"
+                                >Phone Number</label
+                              >
+                              <input
+                                type="tel"
+                                class="form-control"
+                                id="phone"
+                                placeholder="+9876543210"
+                              />
+                            </div>
+                            <div class="mb-3 text-start">
+                              <label
+                                for="permision"
+                                class="form-label text-start"
+                                >Permision</label
+                              >
+                              <select
+                                name="permision"
+                                class="form-select"
+                                id="permision"
+                              >
+                                <option value="Master-Admin" selected>
+                                  Master Admin
+                                </option>
+                                <option value="Admin-Data-BPS ">
+                                  Admn Data BPS
+                                </option>
+                                <option value="Non-Admin ">Non Admin</option>
+                                <option value="Admin-Data-Comtrade ">
+                                  Admin Data Comtrade
+                                </option>
+                              </select>
+                            </div>
+                            <div class="flex gap-5">
+                              <button
+                                type="button"
+                                class="btn btn-outline-primary px-4"
+                                data-bs-dismiss="modal"
+                              >
+                                Cancel
+                              </button>
+                              <a
+                                class="btn btn-primary w-75"
+                                data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop2"
+                              >
+                                Update
+                              </a>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Modal update -->
+                  <div
+                    class="modal fade"
+                    id="staticBackdrop2"
+                    data-bs-backdrop="static"
+                    data-bs-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog modal-dialog-centered mx-auto">
+                      <div class="modal-content text-center">
+                        <div class="modal-header">
+                          <div></div>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></button>
+                        </div>
+                        <div
+                          class="modal-body text-center justify-content-center mx-auto"
+                        >
+                          <h1
+                            class="modal-title fs-3 fw-bold"
+                            id="staticBackdropLabel"
+                          >
+                            Anda yakin?
+                          </h1>
+                          Apakah anda yakin untuk menghapus simpan ini? file ini
+                          belum diselesaikan
+                        </div>
+                        <div class="modal-footer gap-3">
+                          <button
+                            type="button"
+                            class="btn btn-outline-primary"
+                            data-bs-dismiss="modal"
+                          >
+                            Close
+                          </button>
+                          <button type="button" class="btn btn-primary">
+                            Simpan
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <tr>
                     <td>Mathilda Bell</td>
                     <td>(435) 474-3348</td>
