--- a/src/download.html
+++ b/src/download.html
@@ -33,180 +33,259 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.min.css"
     />
-    <div class="">
-      <div class="d-flex">
-        <div class="col-2 bg-blue p-3 text-white sidebar-admin">
-          <div class="position-fixed">
-            <div class="d-flex align-items-center pb-4">
-              <img src="assets/logo-sidebar.png" alt="" />
-            </div>
-            <ul class="list-unstyled text">
-              <li class="nav-link">
-                <a href="artikelDashboard.html" class="d-block p-2">
-                  <i class="fa-solid fa-file-lines"></i> Artikel</a
-                >
-              </li>
-              <li class="nav-link">
-                <a href="ebook.html" class="d-block p-2"
-                  ><i class="fa-solid fa-book"></i> E-Book</a
-                >
-              </li>
-              <li class="nav-link">
-                <a href="uplod.html" class="d-block p-2"
-                  ><i class="fa-solid fa-upload"></i> Unggah</a
-                >
-              </li>
-              <li class="nav-link active">
-                <a href="download.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> Download</a
-                >
-              </li>
-              <li class="nav-link">
-                <a href="admin.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user"></i> Menejemen User</a
-                >
-              </li>
 
-              <li class="nav-link">
-                <a href="roleManagement.html" class="d-block p-2"
-                  ><i class="fa-solid fa-user-cog"></i> Peran</a
+    <div class="d-block d-sm-block d-lg-flex">
+      <div
+        class="col-2 d-none d-sm-none d-md-none d-lg-block bg-blue p-3 text-white sidebar-admin"
+      >
+        <div class="position-fixed">
+          <div class="d-flex align-items-center pb-4">
+            <img src="assets/logo-sidebar.png" alt="" />
+          </div>
+          <ul class="list-unstyled text h-50">
+            <li class="nav-link">
+              <a href="artikelDashboard.html" class="d-block p-2">
+                <i class="fa-solid fa-file-lines"></i> Artikel</a
+              >
+            </li>
+            <li class="nav-link">
+              <a href="ebook.html" class="d-block p-2"
+                ><i class="fa-solid fa-book"></i> E-Book</a
+              >
+            </li>
+            <li class="nav-link">
+              <a href="uplod.html" class="d-block p-2"
+                ><i class="fa-solid fa-upload"></i> Unggah</a
+              >
+            </li>
+            <li class="nav-link active">
+              <a href="download.html" class="d-block p-2"
+                ><i class="fa-solid fa-user"></i> Download</a
+              >
+            </li>
+
+            <li class="nav-link">
+              <a href="admin.html" class="d-block p-2"
+                ><i class="fa-solid fa-user"></i> Menejemen User</a
+              >
+            </li>
+            <li class="nav-link mb-5">
+              <a href="roleManagement.html" class="d-block p-2"
+                ><i class="fa-solid fa-user-cog"></i> Peran</a
+              >
+            </li>
+            <div class="pt-5">
+              <li class="nav-link mt-5">
+                <a href="index.html" class="d-block p-2"
+                  ><i class="fa-solid fa-arrow-right-from-bracket"></i>
+                  Keluar</a
                 >
               </li>
-            </ul>
-            <div class="logout-submenu">
-              <a href="index.html" class="d-block p-2"
-                ><i class="fa-solid fa-arrow-right-from-bracket"></i> Keluar</a
-              >
             </div>
-          </div>
+          </ul>
         </div>
-        <div class="col-10">
-          <!-- navbar -->
-          <div
-            class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-5"
-          >
-            <img src="assets/logo.png" alt="" />
-            <div class="d-flex align-items-center gap-4">
-              <i class="fa-solid fa-bell fa-lg text-secondary"></i>
-              <img
-                src="https://via.placeholder.com/30"
-                alt="Avatar"
-                class="rounded-circle img-fluid"
-              />
-            </div>
+      </div>
+      <div class="col-12 col-sm-12 col-lg-10">
+        <!-- navbar -->
+        <nav
+          class="navbar bg-white sticky-top shadow-sm d-flex justify-content-between align-items-center px-2 px-sm-5 w-100"
+        >
+          <img src="assets/logo.png" alt="" />
+          <div class="d-flex align-items-center gap-4">
+            <img
+              src="https://via.placeholder.com/30"
+              alt="Avatar"
+              class="rounded-circle img-fluid"
+            />
           </div>
-          <!-- content -->
-          <div class="px-5 mt-4">
-            <div class="mt-5 w-100">
+          <button
+            class="navbar-toggler btn btn-dark d-block d-sm-block d-lg-none"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
+          >
+            <i class="fas fa-bars py-2"></i>
+          </button>
+        </nav>
+
+        <!-- sidebar mobile -->
+        <div class="d-sm-block d-block d-md-none">
+          <nav class="navbar position-absolute">
+            <div class="container-fluid">
               <div
-                class="d-flex justify-content-between align-items-center mb-3"
+                class="offcanvas offcanvas-end bg-primary"
+                tabindex="-1"
+                id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel"
               >
-                <div>
-                  <h5 class="fw-bold fs-4">Download</h5>
+                <div class="offcanvas-body text-white sidebar-admin">
+                  <div class="d-flex align-items-center pb-4">
+                    <img src="assets/logo-sidebar.png" alt="" />
+                  </div>
+                  <ul class="list-unstyled text">
+                    <li class="nav-link">
+                      <a href="artikelDashboard.html" class="d-block p-2">
+                        <i class="fa-solid fa-file-lines"></i> Artikel</a
+                      >
+                    </li>
+                    <li class="nav-link">
+                      <a href="ebook.html" class="d-block p-2"
+                        ><i class="fa-solid fa-book"></i> E-Book</a
+                      >
+                    </li>
+                    <li class="nav-link">
+                      <a href="uplod.html" class="d-block p-2"
+                        ><i class="fa-solid fa-upload"></i> Unggah</a
+                      >
+                    </li>
+                    <li class="nav-link active">
+                      <a href="download.html" class="d-block p-2"
+                        ><i class="fa-solid fa-user"></i> Download</a
+                      >
+                    </li>
+
+                    <li class="nav-link">
+                      <a href="admin.html" class="d-block p-2"
+                        ><i class="fa-solid fa-user"></i> Menejemen User</a
+                      >
+                    </li>
+                    <li class="nav-link">
+                      <a href="roleManagement.html" class="d-block p-2"
+                        ><i class="fa-solid fa-user-cog"></i> Peran</a
+                      >
+                    </li>
+                    <li class="nav-link">
+                      <a href="index.html" class="d-block p-2"
+                        ><i class="fa-solid fa-arrow-right-from-bracket"></i>
+                        Keluar</a
+                      >
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <div class="bg-white p-4 mt-4">
-                <div class="">
-                  <h5 class="fw-bold fs-4">Download Data</h5>
-                  <p class="text-black-50 fw-light">Data Comtrade Final</p>
-                </div>
-                <div class="gap-4 my-4 justify-content-between">
-                  <label for="exampleFormControlInput1" class="form-label mb-2"
-                    >Nama Komoditas</label
-                  >
-                  <select name="" class="form-select" id="permision">
-                    <option value="" selected>Udang</option>
-                    <option value="">Lobster</option>
-                    <option value="">Tripia</option>
-                    <option value="">Nila</option>
-                  </select>
-                </div>
-                <div class="d-flex justify-content-between gap-4">
-                  <div class="w-100">
+            </div>
+          </nav>
+        </div>
+        <!-- content -->
+        <div class="px-2 px-md-5 mt-4">
+          <div class="mt-5">
+            <h5 class="fw-bold mb-4 fs-4">Download</h5>
+            <div class="d-block d-sm-block d-lg-flex gap-4">
+              <div class="bg-white col-12 gap-5 justify-content-between p-3">
+                <div class="my-4 justify-content-between">
+                  <div class="">
+                    <h5 class="fw-bold fs-4">Download Data</h5>
+                    <p class="text-black-50 fw-light">Data Comtrade Final</p>
+                  </div>
+                  <div class="gap-4 my-4 justify-content-between">
                     <label
                       for="exampleFormControlInput1"
                       class="form-label mb-2"
-                      >Tahun Awal</label
+                      >Nama Komoditas</label
                     >
-                    <select name="permision" class="form-select" id="permision">
-                      <option value="Master-Admin" selected>2021</option>
-                      <option value="">2019</option>
-                      <option value="">2020</option>
-                      <option value="">2022</option>
-                      <option value="">2023</option>
-                      <option value="">2024</option>
+                    <select name="" class="form-select" id="permision">
+                      <option value="" selected>Udang</option>
+                      <option value="">Lobster</option>
+                      <option value="">Tripia</option>
+                      <option value="">Nila</option>
                     </select>
                   </div>
-                  <div class="w-100">
-                    <label
-                      for="exampleFormControlInput1"
-                      class="form-label mb-2"
-                      >Tahun Akhir</label
-                    >
-                    <select name="permision" class="form-select" id="permision">
-                      <option value="Master-Admin" selected>2024</option>
-                      <option value="">2019</option>
-                      <option value="">2020</option>
-                      <option value="">2021</option>
-                      <option value="">2022</option>
-                      <option value="">2023</option>
-                    </select>
+                  <div class="d-flex justify-content-between gap-4">
+                    <div class="w-100">
+                      <label
+                        for="exampleFormControlInput1"
+                        class="form-label mb-2"
+                        >Tahun Awal</label
+                      >
+                      <select
+                        name="permision"
+                        class="form-select"
+                        id="permision"
+                      >
+                        <option value="Master-Admin" selected>2021</option>
+                        <option value="">2019</option>
+                        <option value="">2020</option>
+                        <option value="">2022</option>
+                        <option value="">2023</option>
+                        <option value="">2024</option>
+                      </select>
+                    </div>
+                    <div class="w-100">
+                      <label
+                        for="exampleFormControlInput1"
+                        class="form-label mb-2"
+                        >Tahun Akhir</label
+                      >
+                      <select
+                        name="permision"
+                        class="form-select"
+                        id="permision"
+                      >
+                        <option value="Master-Admin" selected>2024</option>
+                        <option value="">2019</option>
+                        <option value="">2020</option>
+                        <option value="">2021</option>
+                        <option value="">2022</option>
+                        <option value="">2023</option>
+                      </select>
+                    </div>
                   </div>
-                </div>
-                <div class="mt-4">
-                  <hr />
-                  <div class="justify-content-end mt-4 text-end d-flex gap-4">
-                    <a
-                      href="#"
-                      class="btn btn-primary"
-                      id="saveRole"
-                      data-bs-toggle="modal"
-                      data-bs-target="#saveBtn"
-                      >Download</a
-                    >
-                  </div>
+                  <div class="mt-4">
+                    <hr />
+                    <div class="justify-content-end mt-4 text-end d-flex gap-4">
+                      <a
+                        href="#"
+                        class="btn btn-primary"
+                        id="saveRole"
+                        data-bs-toggle="modal"
+                        data-bs-target="#saveBtn"
+                        >Download</a
+                      >
+                    </div>
 
-                  <!-- Modal -->
-                  <div
-                    class="modal fade"
-                    id="saveBtn"
-                    data-bs-backdrop="static"
-                    data-bs-keyboard="false"
-                    tabindex="-1"
-                    aria-labelledby="staticBackdropLabel"
-                    aria-hidden="true"
-                  >
-                    <div class="modal-dialog modal-dialog-centered mx-auto">
-                      <div class="modal-content text-center">
-                        <div class="modal-header">
-                          <div></div>
-                          <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Close"
-                          ></button>
-                        </div>
-                        <div class="modal-body">
-                          <h1
-                            class="modal-title fs-5 fw-bold mb-3"
-                            id="staticBackdropLabel"
-                          >
-                            Anda yakin ?
-                          </h1>
-                          Apakah Anda yakin ingin download file ini?
-                        </div>
-                        <div class="modal-footer gap-3">
-                          <button
-                            type="button"
-                            class="btn btn-outline-primary w-25"
-                            data-bs-dismiss="modal"
-                          >
-                            Batal
-                          </button>
-                          <button type="button" class="btn btn-primary w-25">
-                            Simpan
-                          </button>
+                    <!-- Modal -->
+                    <div
+                      class="modal fade"
+                      id="saveBtn"
+                      data-bs-backdrop="static"
+                      data-bs-keyboard="false"
+                      tabindex="-1"
+                      aria-labelledby="staticBackdropLabel"
+                      aria-hidden="true"
+                    >
+                      <div class="modal-dialog modal-dialog-centered mx-auto">
+                        <div class="modal-content text-center">
+                          <div class="modal-header">
+                            <div></div>
+                            <button
+                              type="button"
+                              class="btn-close"
+                              data-bs-dismiss="modal"
+                              aria-label="Close"
+                            ></button>
+                          </div>
+                          <div class="modal-body">
+                            <h1
+                              class="modal-title fs-5 fw-bold mb-3"
+                              id="staticBackdropLabel"
+                            >
+                              Anda yakin ?
+                            </h1>
+                            Apakah Anda yakin ingin download file ini?
+                          </div>
+                          <div class="modal-footer gap-3">
+                            <button
+                              type="button"
+                              class="btn btn-outline-primary w-25"
+                              data-bs-dismiss="modal"
+                            >
+                              Batal
+                            </button>
+                            <button type="button" class="btn btn-primary w-25">
+                              Simpan
+                            </button>
+                          </div>
                         </div>
                       </div>
                     </div>
